# ui-mock

./: Cargo.toml  README.md
src/: NOTES.txt  basicintl.rs  gui.rs  guiactions.rs  guimenus.rs  guistate.rs  guiutil.rs  guiwindows.rs  lib.rs  main.rs  menunone.rs  navarrows.rs  piemenu.rs  statgraph.rs
src/assets/: grids.json
src/assets/locales/: menus.json
src/dialogs/: guigrid.rs  guilogin.rs  mod.rs
src/examples/ui-mock/: eventswitch.rs  examplesupport.rs  main.rs  uiinfo.rs
src/examples/ui-mock/dialogs/: guigrid.rs  guilogin.rs  menuconnected.rs  menuhelp.rs  menulogin.rs  menustart.rs  mod.rs
src/examples/ui-mock/libdialog/: eventswitch.rs  mod.rs  screenshot.rs  uiinfo.rs
src/examples/ui-mock/libdialog/dialogs/: dialogclick.rs  dialoggrid.rs  dialoglogin.rs  dialogstats.rs  guigrid.rs  guilogin.rs  menuavatar.rs  menuconnected.rs  menuhelp.rs  menulogin.rs  menustart.rs  mod.rs
src/libui/: basicintl.rs  gui.rs  guiactions.rs  guimenus.rs  guiwindows.rs  mod.rs
src/locales/: README.md  menus.json
src/locales/gui/: menus.json
