[package]
name = "libui"
version = "0.9.2"
edition = "2021"
description = "User interface mock-up and demo for Rend3/Egui game-type cross platform applications"

#   Usable targets:
#   - native (on Linux)
#   - x86_64-pc-windows-gnu
#
#   When compiling on Linux for a Linux target, use
#
#       cargo build --examples
#
#       cargo build --release --examples
#
#   When cross-compiling to Windows, use:
#
#       cargo build --target x86_64-pc-windows-gnu --examples
#
#       cargo build --profile winrelease --target x86_64-pc-windows-gnu --examples
#
#   This will require a 16GB RAM computer and a minutes-long link, due to Rust bug #98302.
#

[package.metadata.bundle]
identifier = "com.animats.ui-mock"
category = "Game"
resources = ["src/images"]
icon = ["src/images/64x64.png", "src/images/32x32.png"]

[profile.release]
debug = true
lto = "thin"

#   Use only when cross-compiling to target "x86_64-pc-windows-gnu"
#   Ref Rust bug #98302. lto = "thin" fails for target x86_64-pc-windows-gnu. "fat" works, but means minutes-longer link times and more than 8GB of RAM to link.
[profile.winrelease]
inherits = "release"
lto = "fat"

[features]
#   Replay file is a development feature and will be off for production
default = ["replay"]
#   Feature "tracy" enables profiing with Tracy
tracy = ["tracy-client", "profiling/profile-with-tracy"]
#   Feature "replay" enables saving and reloading the viewer state.
#   This should not be enabled in production builds for content security.
replay = []

[[example]]
name = "ui-mock"
path = "src/examples/ui-mock/main.rs"

[dependencies]
#   Rendering-related
env_logger = { version = "0.10.1" }
glam = {version = "0.24", features = ["bytemuck"]}
histogram = "0.6.9"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
pico-args = "0.4"
pollster = "0.2.4"
profiling = { version = "1", default-features = false }
#   Using pinned version of Rend3 0.3 Unreleased because the API changed from 0.2 and 0.3 isn't released yet.
# rend3 = { git = 'https://github.com/BVE-Reborn/rend3.git' }
# rend3-routine = { git = 'https://github.com/BVE-Reborn/rend3.git' }
# rend3-framework = { git = 'https://github.com/BVE-Reborn/rend3.git' }
# rend3-egui = { git = 'https://github.com/BVE-Reborn/rend3.git' }

rend3 = { version = "^0.3.0", git = 'https://github.com/BVE-Reborn/rend3.git', rev = "a68c76a" }
rend3-egui = { version = "^0.3.0", git = 'https://github.com/BVE-Reborn/rend3.git', rev = "a68c76a" }
rend3-framework = { version = "^0.3.0", git = 'https://github.com/BVE-Reborn/rend3.git', rev = "a68c76a" }
rend3-routine = { version = "^0.3.0", git = 'https://github.com/BVE-Reborn/rend3.git', rev = "a68c76a" }
rustc-hash = "1"
smallvec = "1"
tracy-client = {version = "0.16", optional = true }
#   WGPU only for texture format, which is also re-imported via Rend3.
wgpu = "0.18"
wgpu-profiler = "0.15.0"
winit = "0.29"
#### egui = "0.24"
#### egui-wgpu = "0.24"
#### egui-winit = "0.24"
#### egui_plot = "0.24"

# The egui immediate mode gui library
egui = {git = "https://github.com/emilk/egui.git", branch="master"}
egui_plot = {git = "https://github.com/emilk/egui.git", branch="master"}
# Winit integration with egui (turn off the clipboard feature)
egui-winit = { git = "https://github.com/emilk/egui.git", branch="master", default-features = false, features = ["links", "wayland"] }

#   End of Rend3 compatibilty section.

####egui_winit_platform = "0.16.0"
# Opening URL's
webbrowser = "0.8.3"

rfd = "0.12"
futures = "0.3.21"
raw-window-handle = "0.4.3"
# Internationalization
once_cell = "1.12.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sys-locale = "0.2.0"
oxilangtag = "0.1.3"
# Dark mode
dark-light = "0.2.3"
# Preferences
directories = "4.0"
# System information
sysinfo = { version = "0.28", default-features = false }
# Concurrency
crossbeam-channel = "0.5"
# Error handling
log = "0.4.17"
simplelog = "0.12"
anyhow = "1.0"
# Security
md5 = "0.7.0"
zeroize = {version = "1.5.7", features = ["zeroize_derive"]}
keyring = "1.2.0"
hex = "0.4.2"
git-version = "0.3.5"





